--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,14 @@
       "prettier"
   ],
   "rules": {
+    "no-underscore-dangle": "off",
+    "no-useless-constructor":"off",
     "prettier/prettier": "error",
+    "class-methods-use-this":"off",
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "argsIgnorePattern": "_"
+    }],
     "import/extensions": [
       "error",
       "ignorePackages",
