--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "no-useless-constructor":"off",
     "prettier/prettier": "error",
     "class-methods-use-this":"off",
-    "@typescript-eslint/camelcase": "off",
+    "camelcase": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }],
