--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.2.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
@@ -29,7 +32,9 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.4",
     "@types/jest": "^26.0.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
