Desenvolvido a implementação de storage remoto para o AWS S3 e configurações de variáveis de ambiente para as diferentes implementações do storage

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_SECRET=
 APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
 
+#Service storage
+STORAGE_DRIVER=
+
 #Service Mail
 MAIL_DRIVER=
 
